k8s/jenkins-discovery.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-discovery
  namespace: default
spec:
  selector:
    chart: jenkins-3.4.1
  ports:
    - protocol: TCP
      port: 50000
      targetPort: 50000
      name: slaves
  type: LoadBalancer
